kassandra/tests/snapshots/session__select 2 columns.snap
---
source: kassandra/tests/session.rs
expression: rows
---
Rows {
    metadata: ResultMetadata {
        col_count: 2,
        global_spec: Some(
            TableSpec {
                ks_name: "cycling",
                table_name: "cyclist_name",
            },
        ),
        paging_state: None,
        col_specs: [
            ColumnSpec {
                table_spec: None,
                name: "id",
                typ: Int,
            },
            ColumnSpec {
                table_spec: None,
                name: "firstname",
                typ: Text,
            },
        ],
    },
    rows: [
        Row {
            columns: [
                Some(
                    Int(
                        1,
                    ),
                ),
                Some(
                    Text(
                        "johnson",
                    ),
                ),
            ],
        },
    ],
}
