kassandra/tests/snapshots/session__select explicit columns.snap
---
source: kassandra/tests/session.rs
expression: rows
---
Rows {
    metadata: ResultMetadata {
        global_spec: Some(
            TableSpec {
                ks_name: "cycling",
                table_name: "cyclist_name",
            },
        ),
        paging_state: None,
        col_specs: [
            ColumnSpec {
                table_spec: None,
                name: "id",
                typ: Int,
            },
            ColumnSpec {
                table_spec: None,
                name: "name",
                typ: Text,
            },
            ColumnSpec {
                table_spec: None,
                name: "rec",
                typ: Text,
            },
        ],
    },
    rows: [
        Row {
            columns: [
                Some(
                    Int(
                        1,
                    ),
                ),
                Some(
                    Text(
                        "johnson",
                    ),
                ),
                Some(
                    Text(
                        "{\"f1\":\"120\",\"f2\":\"126\"}",
                    ),
                ),
            ],
        },
    ],
}
