kassandra/tests/snapshots/session__select single row.snap
---
source: kassandra/tests/session.rs
expression: rows
---
Rows {
    metadata: ResultMetadata {
        global_spec: Some(
            TableSpec {
                ks_name: "cycling",
                table_name: "cyclist_name",
            },
        ),
        paging_state: None,
        col_specs: [
            ColumnSpec {
                table_spec: None,
                name: "name",
                typ: Text,
            },
            ColumnSpec {
                table_spec: None,
                name: "rec",
                typ: Text,
            },
        ],
    },
    rows: [
        Row {
            columns: [
                Some(
                    Text(
                        "smithson",
                    ),
                ),
                Some(
                    Text(
                        "{\"f1\":\"120\",\"f2\":\"126\"}",
                    ),
                ),
            ],
        },
    ],
}
